# oifits-investigator

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  libraries.md
lib/qcustomplot/: CMakeLists.txt
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  main.h
